--- a/pom.xml
+++ b/pom.xml
@@ -219,7 +219,7 @@
 		<dependency>
 			<groupId>org.culturegraph</groupId>
 			<artifactId>metafacture-core</artifactId>
-			<version>3.5.0</version>
+			<version>5.0.0-SNAPSHOT</version>
 		</dependency>
 
 		<!-- In a perfect world the slf4j binding would be a
