make logging in metafacture runner with core 5.0 and simple logger again available

--- a/config/java-options.conf
+++ b/config/java-options.conf
@@ -11,6 +11,8 @@
 
 # Configure log4j to read its configuration from a file:
 -Dlog4j.configuration="file:///$METAFACTURE_HOME/config/log4j.xml"
+-Dorg.slf4j.simpleLogger.defaultLogLevel=debug
+#-Dlog4j.configuration=file:///home/swissbib/environment/code/data.science/metafacture.based/culturegraph/mf-runner.latest/config/log4j.xml
 
 # Configure simple jndi as default jndi provider:
 -Djava.naming.factory.initial=org.osjava.sj.SimpleContextFactory
