--- a/pom.xml
+++ b/pom.xml
@@ -232,8 +232,8 @@
 		     need to be placed on the class path. -->
 		<dependency>
 			<groupId>org.slf4j</groupId>
-			<artifactId>slf4j-log4j12</artifactId>
-			<version>1.7.6</version>
+			<artifactId>slf4j-simple</artifactId>
+			<version>1.7.21</version>
 		</dependency>
 
 		<!-- The following dependencies are placed in the "provided"
